--- a/src/styles/components/LandingPage/RegionDetails.scss
+++ b/src/styles/components/LandingPage/RegionDetails.scss
@@ -9,6 +9,11 @@
   padding: 0px 24px;
 }
 
+.region_details__region_id {
+  font-size: 14px;
+  font-weight: 600;
+}
+
 .region_details__name_header {
   padding: 10px 0px 4px 0px;
 }
